# psy

./: pyproject.toml
notebooks/: scales.py
src/psy/: __init__.py  psy.py
