[project]
name = "psy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kureta", email = "skureta@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "abjad>=3.31",
    "librosa>=0.11.0",
    "marimo>=0.18.1",
    "matplotlib>=3.10.7",
    "music21>=9.9.1",
    "numpy>=2.3.5",
    "polars>=1.35.2",
    "pyaudio>=0.2.14",
    "scipy>=1.16.3",
    "tinysoundfont>=0.3.7",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "isort>=7.0.0",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server>=1.13.2",
    "ruff>=0.14.7",
    "ty>=0.0.1a29",
    "websockets>=15.0.1",
]
